# cp-organization

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  cd.sh  cd_remote.sh  run_tests.sh
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
config/: mongodb_connection.json
config/actions/: amqp_api.json  amqp_connection.json  mongodb_connection.json  openid_connect_config.json
config/dev/: amqp_api.json
config/local/: amqp_connection.json
config/prod/: amqp_api.json  openid_connect_config.json
env/: actions.env  actions.sh  dev.env  dev.sh  local.env
src/: error.rs  init.rs  main.rs
src/api/: api_actions.rs  api_plugins.rs  mod.rs
src/api/actions/: create_invitation_code.rs  create_org.rs  create_organization.rs  mod.rs  organization.rs
src/logic/: logic_executors.rs  logic_request.rs  mod.rs
src/logic/actions/: invitation_code_action.rs  mod.rs  organization_action.rs
src/logic/executors/: invitation_code.rs  mod.rs  organization.rs
src/storage/: dispatch.rs  mod.rs  role.rs  storage_details.rs  storage_request.rs
src/storage/actions/: invitation_code_action.rs  member_action.rs  mod.rs  organization_action.rs  role_action.rs
src/storage/executors/: invitation_code_executor.rs  member_executor.rs  mod.rs  organization.rs  organization_executor.rs  role_executor.rs
