[package]
name = "cp-organization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cp-microservice = "0.1"

async-channel = "1.9"

log = "0.4"

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mongodb = "2.3.1"