[package]
name = "cp-organization"
version = "5123.0.0"
edition = "2021"
license = "MIT"
description = "Cuplan Auth0 organization extension"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cp-microservice = "0.1"
cp-core = "0.1"

multiple-connections-lapin-wrapper = "0.1.0"

async-channel = "1.9"

log = "0.4"
simple_logger = "4.2"

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mongodb = "2.7"
bson = "2.7"

uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

lapin = "2.1"

celes = "2.4"